--- a/product-landing-page/index.html
+++ b/product-landing-page/index.html
@@ -23,18 +23,85 @@
     </header>
     <section>
       <form id="form" action="https://www.freecodecamp.com/email-submit">
-        <input
-          id="email"
-          name="email"
-          type="email"
-          placeholder="Enter yor email address"
-        /><input id="submit" type="submit" />GET STARTED
+        <h1>Handcrafted, home-made masterpieces</h1>
+        <div>
+          <input
+            id="email"
+            name="email"
+            type="email"
+            placeholder="Enter yor email address"
+          /><input id="submit" type="submit" value="GET STARTED" />
+        </div>
       </form>
     </section>
-    <section id="features"></section>
-    <section id="how-it-works">
-      <iframe id="video" src="https://youtu.be/y8Yv4pnO7qc"></iframe>
+    <section id="features">
+      <ul>
+        <li class="feature">
+          <h1>Premium Materials</h1>
+          <p>
+            Our trombones use the shiniest brass which is sourced locally. This
+            will increase the longevity of your purchase.
+          </p>
+        </li>
+        <li class="feature">
+          <h1>Fast Shipping</h1>
+          <p>
+            We make sure you receive your trombone as soon as we have finished
+            making it. We also provide free returns if you are not satisfied.
+          </p>
+        </li>
+        <li class="feature">
+          <h1>Quality Assurance</h1>
+          <p>
+            For every purchase you make, we will ensure there are no damages or
+            faults and we will check and test the pitch of your instrument.
+          </p>
+        </li>
+      </ul>
     </section>
-    <section id="pricing"></section>
+    <section id="how-it-works">
+      <iframe
+        id="video"
+        src="https://www.youtube.com/embed/y8Yv4pnO7qc?si=uAi9wou8Iz-3QXWl"
+      ></iframe>
+    </section>
+    <section id="pricing">
+      <div>
+        <h4 class="pricing-title">TENOR TROMBONE</h4>
+        <h2>$600</h2>
+        <ul>
+          <li>Lorem ipsum.</li>
+          <li>Lorem ipsum.</li>
+          <li>Lorem ipsum dolor.</li>
+          <li>Lorem ipsum.</li>
+        </ul>
+        <button>select</button>
+      </div>
+      <div>
+        <h4 class="pricing-title">BASS TROMBONE</h4>
+        <h2>$900</h2>
+        <ul>
+          <li>Lorem ipsum.</li>
+          <li>Lorem ipsum.</li>
+          <li>Lorem ipsum dolor.</li>
+          <li>Lorem ipsum.</li>
+        </ul>
+        <button>select</button>
+      </div>
+      <div>
+        <h4 class="pricing-title">VALVE TROMBONE</h4>
+        <h2>$1200</h2>
+        <ul>
+          <li>Plays similar to a Trumpet</li>
+          <li>Great for Jazz Bands</li>
+          <li>Lorem ipsum dolor.</li>
+          <li>Lorem ipsum.</li>
+        </ul>
+        <button>select</button>
+      </div>
+    </section>
+    <footer>
+      <ul id="footer-items"></ul>
+    </footer>
   </body>
 </html>
