--- a/personal-portfolio-webpage/index.html
+++ b/personal-portfolio-webpage/index.html
@@ -1,26 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
     <title>Personal Portfolio</title>
   </head>
   <body>
-     <nav id="navbar">
-      <a href="#projects">WORK</a>
+    <nav id="navbar">
+      <div id="link-list">
+        <a href="#welcome-section">About</a>
+        <a href="#projects">Work</a>
+        <a href="#contact-footer">Contact</a>
+      </div>
     </nav>
     <section id="welcome-section">
-      <h1>HI</h1>
-    </section>
-    <section id="projects">
       <div>
-        <h4 class="project-tile"></h4>
-        <a>ABC project</a>
+        <h1>HI, GUYS!!!</h1>
+        <h3>Welcome to Oshin's portfolio</h3>
+        <p id="thep">
+          Down here are my projects from Responsive Web Design course.
+        </p>
       </div>
     </section>
-    <footer>
-      <a id="profile-link" target="_blank"></a>
+    <section id="projects">
+      <h4 id="project-tile">4 Projects from Responsive Web Design course</h4>
+      <ul id="project-list">
+        <li>
+          <h4 class="project-tile">product-landing-page</h4>
+          <a>ABC project</a>
+          <img
+            alt="fake pj"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/20240314_Lisa_Manoban_07.jpg/500px-20240314_Lisa_Manoban_07.jpg"
+          />
+        </li>
+        <li>
+          <h4 class="project-tile">survey-form</h4>
+          <a>ABC project</a>
+          <img
+            alt="fake pj"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/20240314_Lisa_Manoban_07.jpg/500px-20240314_Lisa_Manoban_07.jpg"
+          />
+        </li>
+        <li>
+          <h4 class="project-tile">technical-documentation-page</h4>
+          <a>ABC project</a>
+          <img
+            alt="fake pj"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/20240314_Lisa_Manoban_07.jpg/500px-20240314_Lisa_Manoban_07.jpg"
+          />
+        </li>
+        <li>
+          <h4 class="project-tile">tribute-page</h4>
+          <a>ABC project</a>
+          <img
+            alt="fake pj"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/20240314_Lisa_Manoban_07.jpg/500px-20240314_Lisa_Manoban_07.jpg"
+          />
+        </li>
+      </ul>
+    </section>
+    <footer id="contact-footer">
+      <address>
+        <a
+          id="profile-link"
+          target="_blank"
+          href="https://github.com/JaoShiGitHub"
+          >GitHub</a
+        >
+        <a
+          id="profile-link"
+          target="_blank"
+          href="mailto:oshin.ganjanapas@gmail.com"
+          >Email</a
+        >
+      </address>
     </footer>
   </body>
 </html>
