--- a/personal-portfolio-webpage/index.html
+++ b/personal-portfolio-webpage/index.html
@@ -24,42 +24,43 @@
       </div>
     </section>
     <section id="projects">
-      <h4 id="project-tile">4 Projects from Responsive Web Design course</h4>
+      <h3 id="project-tile">4 Projects from Responsive Web Design</h3>
       <ul id="project-list">
         <li>
-          <h4 class="project-tile">product-landing-page</h4>
-          <a>ABC project</a>
-          <img
-            alt="fake pj"
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/20240314_Lisa_Manoban_07.jpg/500px-20240314_Lisa_Manoban_07.jpg"
-          />
+          <a
+            target="_blank"
+            href="https://fcc-product-landing-page1.vercel.app/"
+          >
+            <h4 class="project-tile">Product Landing Page</h4>
+
+            <img alt="fake pj" src="./images/p1.png" />
+          </a>
         </li>
         <li>
-          <h4 class="project-tile">survey-form</h4>
-          <a>ABC project</a>
-          <img
-            alt="fake pj"
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/20240314_Lisa_Manoban_07.jpg/500px-20240314_Lisa_Manoban_07.jpg"
-          />
+          <a target="_blank" href="https://fcc-survey-form-taupe.vercel.app/">
+            <h4 class="project-tile">Survey Form</h4>
+
+            <img alt="fake pj" src="./images/p2.png" />
+          </a>
         </li>
         <li>
-          <h4 class="project-tile">technical-documentation-page</h4>
-          <a>ABC project</a>
-          <img
-            alt="fake pj"
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/20240314_Lisa_Manoban_07.jpg/500px-20240314_Lisa_Manoban_07.jpg"
-          />
+          <a
+            target="_blank"
+            href="https://technical-documentation-page-ruddy.vercel.app/"
+          >
+            <h4 class="project-tile">Technical Documentation Page</h4>
+            <img alt="fake pj" src="./images/p4.png" />
+          </a>
         </li>
         <li>
-          <h4 class="project-tile">tribute-page</h4>
-          <a>ABC project</a>
-          <img
-            alt="fake pj"
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/20240314_Lisa_Manoban_07.jpg/500px-20240314_Lisa_Manoban_07.jpg"
-          />
+          <a target="_blank" href=" https://tribute-page-black.vercel.app/">
+            <h4 class="project-tile">Tribute Page</h4>
+            <img alt="fake pj" src="./images/p3.png" />
+          </a>
         </li>
       </ul>
     </section>
+
     <footer id="contact-footer">
       <address>
         <a
